# ratatui_plotters_image_demo

./: Cargo.toml  README.md
src/: instruments.rs  main.rs  todo_list.rs
src/data/: data.rs
src/views/: instruments.rs  notes.rs  todo_list.rs
