[package]
edition = "2024"
name = "ratatui_plotters_image_demo"
version = "0.1.0"

[dependencies]
color-eyre = "0.6.5"
crossterm = {version = "0.29.0", features = ["event-stream"]}
plotters = "0.3.7"
ratatui = "0.29.0"
tokio = {version = "1.45.1", features = ["full"]}
# futures = "0.3.31"
futures-util = "0.3.31"
image = "0.25.6"
plotters-backend = "0.3.7"
ratatui-image = "8.0.1"
strum = "0.27.1"
strum_macros = "0.27.1"
tokio-stream = "0.1.17"
